# iprefer

./: .hgignore  README.md  iprefer.wsgi  pyproject.toml  run_dev.sh
data/: data.sqlite3  parse_osm.py  user.sql  user.sqlite3
iprefer/: __init__.py  dataset.py  db.py  fragments.py  graph.py  helper.py  iprefer.py  item.sql  user.sql
iprefer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
iprefer/importer/: __init__.py  dataset.sql  osm.py  wikidata.py  wikilinks.sql
iprefer/static/: style.css
iprefer/templates/: alternatives.html  base.html  index.html  item.html
tests/: conftest.py  test_graph.py  test_iprefer.py
