[tool.poetry]
name = "iprefer"
version = "0.1.0"
description = ""
authors = ["Karl Bartel <karl42@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiosql = "^3.0"
flask = "^1.1"
networkx = "^2.3"
flask-dance = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pygraphviz = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
